--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </nav>
 
             <section class="row">
-
+                <div class="col-6"></div>
             </section>
         </header> 
         <main>
