--- a/index.html
+++ b/index.html
@@ -19,20 +19,51 @@
             <nav class="row">
                 
             </nav>
-
+            <!-- section 1 -->
             <section class="row">
-                <div class="col-6"></div>
+                <div class="offset-3 col-6">
+                    <img src="https://via.placeholder.com/150" alt="holder">
+                    <h1>lorem ipsum</h1>
+                    <span>del sottotitolo random</span>
+                </div>
             </section>
-        </header> 
+        </header>
+
         <main>
+            <!-- section 2 -->
             <figure class="row">
-
+                <div class="offset-2 col-8">
+                    <div>
+                        <h1>Title</h1>
+                    </div>
+                    <div class="row">
+                        <div class="box col-4"></div>
+                        <div class="box col-4"></div>
+                        <div class="box col-4"></div>
+                        <div class="box col-4"></div>
+                        <div class="box col-4"></div>
+                        <div class="box col-4"></div>                  
+                    </div>                   
+                </div>    
             </figure>
+
+            <!-- section 3 -->
             <article class="row">
-
+                <div class="offset-2 col-8">
+                    <div>
+                        <h1>Title</h1>
+                    </div> 
+                    <div class="row">
+                        <div class="box col-6"></div>
+                        <div class="box col-6"></div>                        
+                    </div>
+                    <span>Sotto testo </span>
+                </div>
             </article>
-            <div class="contact row">
 
+            <!-- section 4 -->
+            <div class="contact row">
+                
             </div>
         </main>
         <footer>
