--- a/index.html
+++ b/index.html
@@ -63,12 +63,33 @@
 
             <!-- section 4 -->
             <div class="contact row">
-                
+                <div class="offset-2 col-8">
+
+                </div>
             </div>
         </main>
+        <!-- footer  -->
         <footer>
-            <div class="row"></div>
-            <div class="row"></div>
+            <div class="row top-footer">
+                <div class="col-4">
+                    <h1>lorem</h1>
+                    <span>lorm ipsum</span>
+                </div>
+                <div class="col-4">
+                    <h1>lorem ipsum</h1>
+                    <span>icons</span>
+                </div>
+                <div class="col-4">
+                    <h1>lorem</h1>
+                    <span>lorm ipsum</span>
+                </div>
+            </div>
+
+            <div class="row footer">
+                <div> 
+                   <h5>copyright</h5> 
+                </div>
+            </div>
         </footer>
     </div>
 </body>
