--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </nav>
             <!-- section 1 -->
             <section class="row">
-                <div class="offset-3 col-6">
+                <div class="offset-lg-3 offset-md-3 col-xs-12 col-md-6 col-lg-6">
                     <img src="https://via.placeholder.com/150" alt="holder">
                     <h1>lorem ipsum</h1>
                     <span>del sottotitolo random</span>
@@ -32,38 +32,38 @@
         <main>
             <!-- section 2 -->
             <figure class="row">
-                <div class="offset-2 col-8">
+                <div class="offset-lg-2 offset-md-1 col-md-10 col-lg-8">
                     <div>
-                        <h1>Title</h1>
+                        <h1>Portfolio</h1>
                     </div>
                     <div class="row">
-                        <div class="box col-4"></div>
-                        <div class="box col-4"></div>
-                        <div class="box col-4"></div>
-                        <div class="box col-4"></div>
-                        <div class="box col-4"></div>
-                        <div class="box col-4"></div>                  
+                        <div class="box col-xs-12 col-md-6 col-lg-4"></div>
+                        <div class="box col-xs-12 col-md-6 col-lg-4"></div>
+                        <div class="box col-xs-12 col-md-6 col-lg-4"></div>
+                        <div class="box col-xs-12 col-md-6 col-lg-4"></div>
+                        <div class="box col-xs-12 col-md-6 col-lg-4"></div>
+                        <div class="box col-xs-12 col-md-6 col-lg-4"></div>                  
                     </div>                   
                 </div>    
             </figure>
 
             <!-- section 3 -->
             <article class="row">
-                <div class="offset-2 col-8">
+                <div class="offset-lg-2 col-md-12 col-lg-8">
                     <div>
                         <h1>Title</h1>
                     </div> 
                     <div class="row">
-                        <div class="box col-6"></div>
-                        <div class="box col-6"></div>                        
+                        <div class="box col-xs-12 col-md-6 col-lg-6"></div>
+                        <div class="box col-xs-12 col-md-6 col-lg-6"></div>                        
                     </div>
-                    <span>Sotto testo </span>
+                    <span >Sotto testo </span>
                 </div>
             </article>
 
             <!-- section 4 -->
             <div class="contact row">
-                <div class="offset-2 col-8">
+                <div class="offset-lg-2 offset-md-2 col-xs-12 col-md-8 col-lg-8">
 
                 </div>
             </div>
@@ -71,15 +71,15 @@
         <!-- footer  -->
         <footer>
             <div class="row top-footer">
-                <div class="col-4">
+                <div class="col-xs-12 col-md-4 col-lg-2">
                     <h1>lorem</h1>
                     <span>lorm ipsum</span>
                 </div>
-                <div class="col-4">
+                <div class="col-xs-12 col-md-4 col-lg-4">
                     <h1>lorem ipsum</h1>
                     <span>icons</span>
                 </div>
-                <div class="col-4">
+                <div class="col-xs-12 col-md-4 col-lg-4">
                     <h1>lorem</h1>
                     <span>lorm ipsum</span>
                 </div>
