--- a/index.html
+++ b/index.html
@@ -54,10 +54,14 @@
                         <h1>Title</h1>
                     </div> 
                     <div class="row">
-                        <div class="box col-xs-12 col-md-6 col-lg-6"></div>
-                        <div class="box col-xs-12 col-md-6 col-lg-6"></div>                        
+                        <div class="box col-xs-12 col-md-6 col-lg-6">
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi quibusdam error qui autem neque amet eveniet quis quam! Repellat maiores quo vel sit delectus, commodi ut optio velit error assumenda. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, laborum? Excepturi veritatis nemo nihil ipsam, labore dicta soluta asperiores beatae enim explicabo, dolor autem eligendi magni? Officia magnam magni excepturi.</p>
+                        </div>
+                        <div class="box col-xs-12 col-md-6 col-lg-6">
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi quibusdam error qui autem neque amet eveniet quis quam! Repellat maiores quo vel sit delectus, commodi ut optio velit error assumenda. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, laborum? Excepturi veritatis nemo nihil ipsam, labore dicta soluta asperiores beatae enim explicabo, dolor autem eligendi magni? Officia magnam magni excepturi.</p>
+                        </div>                        
                     </div>
-                    <span >Sotto testo </span>
+                    <button>Download </button>
                 </div>
             </article>
 
@@ -71,7 +75,7 @@
         <!-- footer  -->
         <footer>
             <div class="row top-footer">
-                <div class="col-xs-12 col-md-4 col-lg-2">
+                <div class="col-xs-12 col-md-4 col-lg-4">
                     <h1>lorem</h1>
                     <span>lorm ipsum</span>
                 </div>
