--- a/index.html
+++ b/index.html
@@ -344,8 +344,9 @@
             <!-- section 3 -->
             <article class="row">
                 <div class="offset-lg-2 col-md-12 col-lg-8">
-                    <div>
+                    <div class="title-article">
                         <h1 class="col-12">ABOUT</h1>
+                        <div class="center-star"><hr>&starf; <hr></div>
                     </div> 
                     <div class="row">
                         <div class="box col-12 col-md-6 col-lg-6">
@@ -353,10 +354,12 @@
                         </div>
                         <div class="box col-12 col-md-6 col-lg-6">
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi quibusdam error qui autem neque amet eveniet quis quam! Repellat maiores quo vel sit delectus, commodi ut optio velit error assumenda. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, laborum? Excepturi veritatis nemo nihil ipsam, labore dicta soluta asperiores beatae enim explicabo, dolor autem eligendi magni? Officia magnam magni excepturi.</p>
-                        </div>                        
+                        </div>
+                        <button class="offset-lg-5 col-lg-2">Download </button>                        
                     </div>
-                    <button>Download </button>
                 </div>
+                
+
             </article>
 
             <!-- section 4 -->
@@ -367,9 +370,10 @@
                             <h1>CONTACT ME</h1>
                             <div class="input"> 
                                 <input placeholder="Name" type="text" id="name" name="name">
-                                <input type="email" id="email" name="email">
-                                <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
-                                <input type="text">
+                                <input placeholder="Email Address" type="email" id="email" name="email">
+                                <input placeholder="Phone Number" type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
+                                <input placeholder="Message" type="text">
+                                <button type="submit" class="btn btn-primary">Send</button>
                             </div>    
                         </div>
                     </div>
