--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
             <!-- section 2 -->
             <figure class="container">
                 <div class="row">
-                    <div class="col-12">
+                    <div class="title-figure col-12">
                         <h1>PORTFOLIO</h1>
                         <div class="center-star"><hr class="hr-black">&starf; <hr class="hr-black"></div>
                     </div>
@@ -345,7 +345,7 @@
             <article class="row">
                 <div class="offset-lg-2 col-md-12 col-lg-8">
                     <div class="title-article">
-                        <h1 class="col-12">ABOUT</h1>
+                        <h1>ABOUT</h1>
                         <div class="center-star"><hr>&starf; <hr></div>
                     </div> 
                     <div class="row">
@@ -355,7 +355,10 @@
                         <div class="box col-12 col-md-6 col-lg-6">
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi quibusdam error qui autem neque amet eveniet quis quam! Repellat maiores quo vel sit delectus, commodi ut optio velit error assumenda. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, laborum? Excepturi veritatis nemo nihil ipsam, labore dicta soluta asperiores beatae enim explicabo, dolor autem eligendi magni? Officia magnam magni excepturi.</p>
                         </div>
-                        <button class="offset-lg-5 col-lg-2">Download </button>                        
+                        <button class="offset-lg-5 offset-md-5 offset-4 col-4 col-md-2 col-lg-2">
+                            <i class="fas fa-download"></i>
+                            <span>Download</span>
+                        </button>                        
                     </div>
                 </div>
                 
@@ -367,12 +370,16 @@
                 <div class="container">
                     <div class="contact row">
                         <div class="offset-lg-1 offset-md-1 col-12 col-md-10 col-lg-10">
-                            <h1>CONTACT ME</h1>
+                            <div>
+                                <h1>CONTACT ME</h1>
+                                <div class="center-star"><hr class="hr-black">&starf; <hr class="hr-black"></div>
+
+                            </div>
                             <div class="input"> 
                                 <input placeholder="Name" type="text" id="name" name="name">
                                 <input placeholder="Email Address" type="email" id="email" name="email">
                                 <input placeholder="Phone Number" type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
-                                <input placeholder="Message" type="text">
+                                <textarea placeholder="Message" name="Message" id="" cols="30" rows="10"></textarea>
                                 <button type="submit" class="btn btn-primary">Send</button>
                             </div>    
                         </div>
@@ -381,25 +388,29 @@
             </div>        
         </main>
         <!-- footer  -->
-        <footer>
-            <div class="row top-footer">
-                <div class="col-12 col-md-4 col-lg-4">
-                    <h1>lorem</h1>
-                    <span>lorm ipsum</span>
-                </div>
-                <div class="col-12 col-md-4 col-lg-4">
-                    <h1>lorem ipsum</h1>
-                    <span>icons</span>
-                </div>
-                <div class="col-12 col-md-4 col-lg-4">
-                    <h1>lorem</h1>
-                    <span>lorm ipsum</span>
-                </div>
+        <footer >
+            <div class="top-footer">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12 col-md-4 col-lg-4">
+                            <h3>LOCATION</h3>
+                            <span>2215 Jhon Daniel Drive Clarck,MO 54243</span>
+                        </div>
+                        <div class="col-12 col-md-4 col-lg-4">
+                            <h3>AROUND THE WEB</h3>
+                            <span>icons</span>
+                        </div>
+                        <div class="col-12 col-md-4 col-lg-4">
+                            <h3>ABOUT FREELANCER</h3>
+                            <span>Freelance is a free to use,open source Bootstrap theme created by <a href="#">Start Boostrap.</a></span>   
+                        </div>
+                    </div> 
+                </div>       
             </div>
 
             <div class="row footer">
-                <div> 
-                   <h5>copyright</h5> 
+                <div class="col-12"> 
+                   <h5>copyright your Website 2019</h5> 
                 </div>
             </div>
         </footer>
